--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "test": "jest",
     "test:watch": "jest --watch",
-    "migrate-poems": "ts-node scripts/migrate-poems.ts"
+    "validate-poems": "ts-node --project tsconfig.scripts.json scripts/validate-poems.ts",
+    "migrate-poems": "ts-node --project tsconfig.scripts.json scripts/migrate-poems.ts"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
@@ -17,6 +18,7 @@
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "chalk": "^4.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
