--- a/package.json
+++ b/package.json
@@ -10,20 +10,21 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "validate-poems": "ts-node --project tsconfig.scripts.json scripts/validate-poems.ts",
-    "migrate-poems": "ts-node --project tsconfig.scripts.json scripts/migrate-poems.ts"
+    "migrate-poems": "ts-node --project tsconfig.scripts.json scripts/migrate-poems.ts",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tabs": "^1.1.1",
     "chalk": "^4.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "gray-matter": "^4.0.3",
     "lucide-react": "^0.454.0",
     "next": "^15.0.3",
+    "next-sitemap": "^4.2.3",
     "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
